26.1.2011 git
- Tests_To_Verify_deltasql_correctness.txt updated
- Fix in dbsync algo patching test cases 1-5
- Test cases 6 and 7 now are much more difficult

24.1.2011 git
- changed all buttons from "Submit query" to action text in caption
- bugfix in edit_script.php: Tags are not allowed
- bugfix in search_scripts.php: Tags are not allowed

21.1.2011 git
- added FAQ question on verification step
- minor changes in FAQ document

1.3.0 Release Notes 30.12.2010
Completely new synchronization algorithm which handles among others branches of branches,
 tagging and upgrade from production to development schema.
 
WARNING: if upgrading production environments from previous versions, please always
 create a backup copy, and adjust table TBBRANCH manually to include sourcebranch and sourcebranch_id.
 In such cases, you can get support from gpu-world at lists.sourceforge.net

When upgrading deltasql server, please launch the following script:

ALTER TABLE `tbbranch` ADD `sourcebranch` VARCHAR( 40 ) NULL;
ALTER TABLE `tbbranch` ADD `sourcebranch_id` int(11) default NULL;
UPDATE `tbbranch` SET sourcebranch='HEAD' where name<>'HEAD';
UPDATE `tbbranch` SET sourcebranch_id=1 where name<>'HEAD';
ALTER TABLE `tbbranch` ADD `istag` tinyint(1) NOT NULL default '0';
ALTER TABLE tbsynchronize ADD tagname varchar(128) NULL;
CREATE TABLE `tbscriptgeneration` (
  `id` int(11) NOT NULL auto_increment,
  `sessionid` varchar(40) collate latin1_general_ci NOT NULL,
  `fromversionnr` int(11) default NULL,
  `toversionnr` int(11) default NULL,
  `frombranch` varchar(40) collate latin1_general_ci NOT NULL,
  `tobranch` varchar(40) collate latin1_general_ci NOT NULL,
  `frombranch_id` int(11) NOT NULL,
  `tobranch_id` int(11) NOT NULL,
  `create_dt` datetime default NULL,
  PRIMARY KEY  (`id`)
) ENGINE=MyISAM  DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=1;

You should launch on database schemas under deltasql versioning the following statement: 