@@ -84,6 +84,7 @@ CREATE TABLE `tbparameter` (
 -- 
 
 INSERT INTO `tbparameter` VALUES (1, 'GLOBAL', 'VERSION', '6');
+INSERT INTO `tbparameter` VALUES ('', 'TEST', 'DB_CONNECTION', 'OK');
 
 
 -- 
