@@ -2,6 +2,8 @@
 - Tests_To_Verify_deltasql_correctness.txt updated
 - Fix in dbsync algo patching test cases 1-5
 - Test cases 6 and 7 now are much more difficult
+- added following parameter to TBPARAMETER:
+INSERT INTO `tbparameter` VALUES ('', 'TEST', 'DB_CONNECTION', 'OK');
 
 24.1.2011 git
 - changed all buttons from "Submit query" to action text in caption
